hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_small_tuple.php
<?hh
function f(): void {
  $f = ($v ==> $v[1]);
  $f(tuple("a"));
}
